# basketballman

./: .dockerignore  Cargo.toml  Dockerfile  README.md  SPEC.md  fly.toml  start.sh
.github/workflows/: deploy.yml
docs/: simulation-flow.md
src/: auth.rs  config.rs  generator.rs  lib.rs  main.rs  models.rs  playoffs.rs  repo.rs  routes.rs  schedule.rs  session.rs  sim.rs  stats.rs  trades.rs  users.rs
static/: app.css  auth.js  islands.js
templates/: game.html  index.html  login.html  player.html  playoffs.html  schedule.html  standings.html  team.html  teams.html  trade_new.html  trades.html
tests/: invariants.rs
