[package]
name = "basketballman"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie-signed"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
